# travel-planner-agent

./: CLAUDE.md  README.md
backend/: .env.example  .gitignore  lint.py  main.py  pyproject.toml
backend/agents/: base.py  destination_agent.py  flight_agent.py  hotel_agent.py  itinerary_agent.py  weather_agent.py
backend/api/: routes.py
backend/core/: job_store.py  orchestrator.py  streaming.py  tools.py
backend/schemas/: events.py  requests.py  responses.py
frontend/: package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/trip/[jobId]/: page.tsx
frontend/components/cards/: AgentCard.tsx  DayCard.tsx  FlightCard.tsx  HotelCard.tsx  WeatherCard.tsx
frontend/components/dashboard/: AgentStatusPanel.tsx  ItineraryPanel.tsx  LiveFeedPanel.tsx  MapPanel.tsx
frontend/components/input/: TripForm.tsx
frontend/components/shared/: AgentBadge.tsx  StatusDot.tsx  StreamingText.tsx
frontend/hooks/: useAgentStream.ts
frontend/lib/: api.ts
frontend/store/: tripStore.ts
