[project]
name = "waypoint-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "openai",
    "httpx",
    "sse-starlette",
    "tavily-python",
    "pydantic>=2.0",
    "loguru",
]

[dependency-groups]
dev = ["ruff", "mypy"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
